<resources>
    <string name="app_name">Hercules Computers</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="prodName">prodName</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
</resources>