<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <EditText
        android:id="@+id/logUsername"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#BF2626"
        app:layout_constraintBottom_toTopOf="@+id/logPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/logPassword"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:textColorHint="#BF2626"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/logButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logUsername" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="Login"
        android:textColor="#DA1515"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/logPassword" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:hint="@string/not_registered"
        android:textColor="#D51414"
        android:textColorHint="#EA1212"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/registerNow"
        app:layout_constraintStart_toStartOf="@+id/registerNow"
        app:layout_constraintTop_toBottomOf="@+id/logButton" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="167dp"
        android:hint="@string/click_here_to_register"
        android:textSize="25dp"
        android:textColorHint="#EA1212"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/logUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hercules" />


</androidx.constraintlayout.widget.ConstraintLayout>