<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registration">


    <EditText
        android:id="@+id/regUsername"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#BF2626"
        app:layout_constraintBottom_toTopOf="@+id/regPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#BF2626"
        app:layout_constraintBottom_toTopOf="@+id/confPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUsername" />

    <EditText
        android:id="@+id/confPassword"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:hint="@string/confirm_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#BF2626"
        app:layout_constraintBottom_toTopOf="@+id/regButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:background="@color/black"
        android:text="Register"
        android:textColor="#DA1515"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/confPassword" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="114dp"
        android:text="Back"
        android:background="@color/black"
        android:textColor="#DA1515"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/regUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hercules" />

</androidx.constraintlayout.widget.ConstraintLayout>